--- a/port-site/src/App.css
+++ b/port-site/src/App.css
@@ -24,11 +24,34 @@
     #4ca1af,
     #2c3e50
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
+
+.projects-grid {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+/* Contact Page */
+.contact-body {
+  margin: auto;
+  background: grey;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 2em;
+}
+/* Contact Page */
 
 .avatar-img {
   height: 250px;
-  /* padding-top: 5em; */
+  margin-top: 5em;
   border-radius: 50%;
 }
 
@@ -56,4 +79,17 @@
   color: white;
   font-size: 20px;
   padding: 1em;
+}
+
+.social-links {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: auto;
+}
+
+.social-links i {
+  color: white;
+  font-size: 5em;
+  padding: 8px;
 }
