--- a/port-site/src/App.css
+++ b/port-site/src/App.css
@@ -37,17 +37,60 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
-/* Contact Page */
+
+/* Resume Page ***********/
+.resume-right-col {
+  background: #27221f;
+  color: white;
+  padding: 2em;
+}
+
+/* Resume Page ***********/
+
+/* Contact Page ***********/
 .contact-body {
   margin: auto;
-  background: grey;
   position: fixed;
   width: 100%;
   height: 100%;
   justify-content: center;
   padding-top: 2em;
 }
-/* Contact Page */
+
+.contact-grid {
+  text-align: center;
+  justify-content: center;
+  width: 80%;
+  height: 550px;
+  background: white;
+  color: black;
+  margin-bottom: 20px;
+}
+
+.contact-grid h2 {
+  font-family: "Anton", sans-serif;
+}
+
+.contact-grid h2 {
+  font-family: "Anton", sans-serif;
+}
+
+.contact-grid p {
+  font-family: "Oxygen", sans-serif;
+  font-weight: bold;
+}
+
+.contact-grid hr {
+  border-top: 5px dotted black;
+  width: 50%;
+  margin: auto;
+}
+
+.contact-list i {
+  font-size: 56px;
+  padding-right: 5rem;
+}
+/* Contact Page ********/
 
 .avatar-img {
   height: 250px;
