--- a/port-site/src/App.css
+++ b/port-site/src/App.css
@@ -1,29 +1,21 @@
 .header-color {
-  background: #2c3e50; /* fallback for old browsers */
+  background: #ed213a; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #4ca1af,
-    #2c3e50
+    #93291e,
+    #ed213a
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #4ca1af,
-    #2c3e50
+    #93291e,
+    #ed213a
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .landing-grid {
-  background: #2c3e50; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #4ca1af,
-    #2c3e50
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #4ca1af,
-    #2c3e50
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: url(./assets/soldiers.jpg) no-repeat center / 120%;
+  background-size: contain cover;
+
   position: fixed;
   top: 0;
   left: 0;
@@ -46,6 +38,44 @@
 }
 
 /* Resume Page ***********/
+
+/* About Me Page ***********/
+
+.about-me {
+  /* margin: 0 auto; */
+  background: url(./assets/soldiers.jpg) no-repeat center / 120%;
+  background-size: contain cover;
+
+  position: fixed;
+  padding: 3%;
+  width: 100%;
+  height: 100%;
+}
+
+.about-paragraph {
+  width: 50%;
+  margin: 0 auto;
+  background-color: black;
+  opacity: 0.75;
+  width: 55%;
+  border-radius: 10px;
+  padding: 1%;
+  padding-bottom: 4%;
+  border: 2px solid red;
+}
+
+.about-paragraph h1 {
+  margin: 0;
+  padding-top: 3%;
+  color: white;
+  text-align: center;
+}
+.about-paragraph p {
+  margin: 0;
+  padding-top: 3%;
+  font-size: 1.3rem;
+  color: white;
+}
 
 /* Contact Page ***********/
 .contact-body {
@@ -99,9 +129,9 @@
 }
 
 .banner-text {
-  background-color: black;
+  background-color: #c0252c;
   opacity: 0.8;
-  width: 75%;
+  width: 55%;
   margin: auto;
   border-radius: 10px;
 }
@@ -135,4 +165,42 @@
   color: white;
   font-size: 5em;
   padding: 8px;
+}
+
+/* Break points */
+
+@media only screen and (max-width: 600px) {
+  .landing-grid {
+    background: url(./assets/soldiers.jpg) no-repeat center / 120%;
+    background-size: contain cover;
+
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 0.5rem;
+  }
+  .landing-grid h1 {
+    font-size: 3.5rem;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .landing-grid {
+    background: url(./assets/soldiers.jpg) no-repeat center / 120%;
+    background-size: contain cover;
+
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 0.5rem;
+  }
+  .landing-grid h1 {
+    font-size: 2rem;
+  }
 }
