--- a/port-site/src/index.css
+++ b/port-site/src/index.css
@@ -15,7 +15,7 @@ code {
 @media only screen and (max-width: 600px) {
   body {
     overflow: hidden;
-    background-color: #fbfbf8;
+    background-color: #242424;
     padding-bottom: 58px;
   }
 }
