--- a/port-site/src/App.css
+++ b/port-site/src/App.css
@@ -15,15 +15,15 @@
 .landing-grid {
   background: url(./assets/sunsetbeach.jpg) no-repeat center / 100%;
   background-size: cover;
-  /* background-image: linear-gradient( 135deg, #FFCF71 10%, #2376DD 100%); */
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 110%;
+  height: 100%;
   text-align: center;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
+
 
 .projects-grid {
   display: flex;
@@ -34,7 +34,7 @@
 /* Resume Page ***********/
 .resume-right-col {
   background: #27221f;
-  color: white;
+  color: #fff;
   padding: 2em;
 }
 
@@ -173,23 +173,39 @@
 /* Break points */
 
 @media only screen and (max-width: 1400px) {
+  /* body {
+    background-color: #242424;
+  } */
   .landing-grid {
-    background: url(./assets/sunsetbeach.jpg) no-repeat center / 100%;
+    /* background: url(./assets/sunsetbeach.jpg) no-repeat center / 100%; */
     background-size: cover;
     overflow: hidden;
-
-    position: relative;
+    background-color: #242424;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 110%;
     text-align: center;
     font-size: 0.5rem;
   }
+  .landing-grid::-webkit-scrollbar {
+  display: none;
+}
+
   .landing-grid h1 {
     font-size: 3.5rem;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    overflow: hidden;
+    background-color: #fff;
+    padding-bottom: 58px;
+  }
+}
+
 
 @media only screen and (max-width: 450px) {
   .landing-grid {
@@ -200,7 +216,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 130%;
     text-align: center;
     font-size: 0.5rem;
   }
