--- a/port-site/src/index.css
+++ b/port-site/src/index.css
@@ -5,17 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* overflow: hidden;
+  overflow-y:hidden; */
+  
 }
+
+/* body::-webkit-scrollbar {
+  display: none;
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-@media only screen and (max-width: 600px) {
-  body {
-    overflow: hidden;
-    background-color: #242424;
-    padding-bottom: 58px;
-  }
-}
